--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/camera_container"
-        android:foreground="@drawable/ic_person"
+        android:foreground="@drawable/ic_gorsel"
 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
